runtime/tests/suite/int_literals.bin.wast
(module binary
  "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
  "\00\01\7f\60\00\01\7e\03\9f\80\80\80\00\1e\00\00"
  "\00\00\00\00\00\00\00\00\00\01\01\01\01\01\01\01"
  "\01\01\01\01\00\00\00\00\01\01\01\01\07\b7\83\80"
  "\80\00\1e\08\69\33\32\2e\74\65\73\74\00\00\08\69"
  "\33\32\2e\75\6d\61\78\00\01\08\69\33\32\2e\73\6d"
  "\61\78\00\02\0c\69\33\32\2e\6e\65\67\5f\73\6d\61"
  "\78\00\03\08\69\33\32\2e\73\6d\69\6e\00\04\0c\69"
  "\33\32\2e\61\6c\74\5f\73\6d\69\6e\00\05\0c\69\33"
  "\32\2e\69\6e\63\5f\73\6d\69\6e\00\06\0c\69\33\32"
  "\2e\6e\65\67\5f\7a\65\72\6f\00\07\0d\69\33\32\2e"
  "\6e\6f\74\5f\6f\63\74\61\6c\00\08\14\69\33\32\2e"
  "\75\6e\73\69\67\6e\65\64\5f\64\65\63\69\6d\61\6c"
  "\00\09\0d\69\33\32\2e\70\6c\75\73\5f\73\69\67\6e"
  "\00\0a\08\69\36\34\2e\74\65\73\74\00\0b\08\69\36"
  "\34\2e\75\6d\61\78\00\0c\08\69\36\34\2e\73\6d\61"
  "\78\00\0d\0c\69\36\34\2e\6e\65\67\5f\73\6d\61\78"
  "\00\0e\08\69\36\34\2e\73\6d\69\6e\00\0f\0c\69\36"
  "\34\2e\61\6c\74\5f\73\6d\69\6e\00\10\0c\69\36\34"
  "\2e\69\6e\63\5f\73\6d\69\6e\00\11\0c\69\36\34\2e"
  "\6e\65\67\5f\7a\65\72\6f\00\12\0d\69\36\34\2e\6e"
  "\6f\74\5f\6f\63\74\61\6c\00\13\14\69\36\34\2e\75"
  "\6e\73\69\67\6e\65\64\5f\64\65\63\69\6d\61\6c\00"
  "\14\0d\69\36\34\2e\70\6c\75\73\5f\73\69\67\6e\00"
  "\15\0c\69\33\32\2d\64\65\63\2d\73\65\70\31\00\16"
  "\0c\69\33\32\2d\64\65\63\2d\73\65\70\32\00\17\0c"
  "\69\33\32\2d\68\65\78\2d\73\65\70\31\00\18\0c\69"
  "\33\32\2d\68\65\78\2d\73\65\70\32\00\19\0c\69\36"
  "\34\2d\64\65\63\2d\73\65\70\31\00\1a\0c\69\36\34"
  "\2d\64\65\63\2d\73\65\70\32\00\1b\0c\69\36\34\2d"
  "\68\65\78\2d\73\65\70\31\00\1c\0c\69\36\34\2d\68"
  "\65\78\2d\73\65\70\32\00\1d\0a\8d\83\80\80\00\1e"
  "\89\80\80\80\00\00\41\8d\a0\b7\dd\00\0f\0b\85\80"
  "\80\80\00\00\41\7f\0f\0b\89\80\80\80\00\00\41\ff"
  "\ff\ff\ff\07\0f\0b\89\80\80\80\00\00\41\81\80\80"
  "\80\78\0f\0b\89\80\80\80\00\00\41\80\80\80\80\78"
  "\0f\0b\89\80\80\80\00\00\41\80\80\80\80\78\0f\0b"
  "\8c\80\80\80\00\00\41\80\80\80\80\78\41\01\6a\0f"
  "\0b\85\80\80\80\00\00\41\00\0f\0b\85\80\80\80\00"
  "\00\41\0a\0f\0b\85\80\80\80\00\00\41\7f\0f\0b\85"
  "\80\80\80\00\00\41\2a\0f\0b\8d\80\80\80\00\00\42"
  "\ee\d4\99\dd\e0\cd\ee\d5\0c\0f\0b\85\80\80\80\00"
  "\00\42\7f\0f\0b\8e\80\80\80\00\00\42\ff\ff\ff\ff"
  "\ff\ff\ff\ff\ff\00\0f\0b\8e\80\80\80\00\00\42\81"
  "\80\80\80\80\80\80\80\80\7f\0f\0b\8e\80\80\80\00"
  "\00\42\80\80\80\80\80\80\80\80\80\7f\0f\0b\8e\80"
  "\80\80\00\00\42\80\80\80\80\80\80\80\80\80\7f\0f"
  "\0b\91\80\80\80\00\00\42\80\80\80\80\80\80\80\80"
  "\80\7f\42\01\7c\0f\0b\85\80\80\80\00\00\42\00\0f"
  "\0b\85\80\80\80\00\00\42\0a\0f\0b\85\80\80\80\00"
  "\00\42\7f\0f\0b\85\80\80\80\00\00\42\2a\0f\0b\86"
  "\80\80\80\00\00\41\c0\84\3d\0b\85\80\80\80\00\00"
  "\41\e8\07\0b\88\80\80\80\00\00\41\99\81\bc\d0\00"
  "\0b\86\80\80\80\00\00\41\8f\d4\06\0b\86\80\80\80"
  "\00\00\42\c0\84\3d\0b\85\80\80\80\00\00\42\e8\07"
  "\0b\8b\80\80\80\00\00\42\99\b3\82\80\f0\81\bc\05"
  "\0b\86\80\80\80\00\00\42\8f\d4\06\0b"
)
(assert_return (invoke "i32.test") (i32.const 195940365))
(assert_return (invoke "i32.umax") (i32.const -1))
(assert_return (invoke "i32.smax") (i32.const 2147483647))
(assert_return (invoke "i32.neg_smax") (i32.const -2147483647))
(assert_return (invoke "i32.smin") (i32.const -2147483648))
(assert_return (invoke "i32.alt_smin") (i32.const -2147483648))
(assert_return (invoke "i32.inc_smin") (i32.const -2147483647))
(assert_return (invoke "i32.neg_zero") (i32.const 0))
(assert_return (invoke "i32.not_octal") (i32.const 10))
(assert_return (invoke "i32.unsigned_decimal") (i32.const -1))
(assert_return (invoke "i32.plus_sign") (i32.const 42))
(assert_return (invoke "i64.test") (i64.const 913028331277281902))
(assert_return (invoke "i64.umax") (i64.const -1))
(assert_return (invoke "i64.smax") (i64.const 9223372036854775807))
(assert_return (invoke "i64.neg_smax") (i64.const -9223372036854775807))
(assert_return (invoke "i64.smin") (i64.const -9223372036854775808))
(assert_return (invoke "i64.alt_smin") (i64.const -9223372036854775808))
(assert_return (invoke "i64.inc_smin") (i64.const -9223372036854775807))
(assert_return (invoke "i64.neg_zero") (i64.const 0))
(assert_return (invoke "i64.not_octal") (i64.const 10))
(assert_return (invoke "i64.unsigned_decimal") (i64.const -1))
(assert_return (invoke "i64.plus_sign") (i64.const 42))
(assert_return (invoke "i32-dec-sep1") (i32.const 1000000))
(assert_return (invoke "i32-dec-sep2") (i32.const 1000))
(assert_return (invoke "i32-hex-sep1") (i32.const 168755353))
(assert_return (invoke "i32-hex-sep2") (i32.const 109071))
(assert_return (invoke "i64-dec-sep1") (i64.const 1000000))
(assert_return (invoke "i64-dec-sep2") (i64.const 1000))
(assert_return (invoke "i64-hex-sep1") (i64.const 3078696982321561))
(assert_return (invoke "i64-hex-sep2") (i64.const 109071))
(assert_malformed
  (module quote "(global i32 (i32.const _100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const +_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const -_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const 99_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const 1__000))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const _0x100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const 0_x100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const 0x_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const 0x00_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i32 (i32.const 0xff__ffff))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const _100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const +_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const -_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const 99_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const 1__000))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const _0x100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const 0_x100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const 0x_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const 0x00_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global i64 (i64.const 0xff__ffff))")
  "unknown operator"
)
